# eva

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.cursor/rules/local/: eva-architecture.mdc  eva-concepts.mdc  eva-implementation-patterns.mdc  eva-prompt-plan.mdc  eva-ux-design.mdc
.github/workflows/: ci.yml
backend/: .ghcid  cabal.project  eva.cabal  eva.yaml
backend/app/: Main.hs
backend/src/Eva/: App.hs  Config.hs  Crypto.hs  Declarative.hs
backend/src/Eva/Api/: Server.hs  Types.hs  WebSocket.hs
backend/src/Eva/Codebase/: Api.hs  Scanner.hs  Types.hs
backend/src/Eva/Core/: Graph.hs  Types.hs  Validation.hs
backend/src/Eva/Engine/: Dispatch.hs  LLM.hs  Runner.hs  Scheduler.hs  StateMachine.hs
backend/src/Eva/Engine/Handlers/: Action.hs  Agent.hs  Connector.hs  Knowledge.hs  Trigger.hs
backend/src/Eva/Integration/: GitHub.hs  Http.hs  Linear.hs  Types.hs
backend/src/Eva/Persistence/: Migration.hs  Queries.hs  Schema.hs
backend/test/: Spec.hs
backend/test/Eva/: DeclarativeSpec.hs
backend/test/Eva/Api/: ServerSpec.hs  WebSocketSpec.hs
backend/test/Eva/Codebase/: ApiSpec.hs  ScannerSpec.hs  TypesSpec.hs
backend/test/Eva/Core/: GraphSpec.hs  TypesSpec.hs  ValidationSpec.hs
backend/test/Eva/Engine/: LLMSpec.hs  RetrySpec.hs  RunnerSpec.hs  SchedulerSpec.hs  StateMachineSpec.hs
backend/test/Eva/Engine/Handlers/: ActionSpec.hs  AgentSpec.hs  ConnectorSpec.hs  KnowledgeSpec.hs  TriggerSpec.hs
backend/test/Eva/Integration/: LinearSpec.hs
backend/test/Eva/Persistence/: PersistenceSpec.hs
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: eva-schema.json
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  monacoSetup.ts
frontend/src/api/: client.ts  codebase.hooks.test.ts  hooks.ts
frontend/src/components/detail/: EdgePanel.tsx  EmptyPanel.tsx  NodePanel.tsx  StepInspector.tsx
frontend/src/components/detail/forms/: ActionForm.tsx  AgentForm.test.tsx  AgentForm.tsx  ConnectorForm.test.tsx  ConnectorForm.tsx  KnowledgeForm.tsx  TriggerForm.test.tsx  TriggerForm.tsx
frontend/src/components/edges/: DataEdge.tsx  ResourceEdge.tsx  index.ts
frontend/src/components/editor/: CodeEditorView.tsx  FileEditor.tsx  FileTabBar.tsx  SpecEditorView.tsx  SyncWarningModal.tsx
frontend/src/components/nodes/: ActionNode.tsx  AgentNode.tsx  BaseNode.tsx  ConnectorNode.tsx  KnowledgeNode.tsx  PortHandle.tsx  TriggerNode.tsx  constants.ts  index.ts
frontend/src/components/panels/: CodebasePanel.tsx
frontend/src/components/shell/: ActivityBar.tsx  AppShell.tsx  BottomPanel.tsx  CanvasContainer.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContentArea.tsx  CredentialsPanel.tsx  DetailPanel.tsx  EditorTabs.test.tsx  EditorTabs.tsx  ErrorBoundary.tsx  LogsPanel.tsx  NodePalette.tsx  OutputPanel.tsx  ProgramsList.tsx  RunsPanel.tsx  SidePanel.tsx  Toolbar.test.tsx  Toolbar.tsx
frontend/src/constants/: nodeConstants.ts
frontend/src/hooks/: useRunStream.test.tsx  useRunStream.ts
frontend/src/lib/: autoLayout.ts
frontend/src/store/: canvasStore.test.ts  canvasStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: yamlSerializer.test.ts  yamlSerializer.ts
scripts/: seed-demo.sh
